Users can index, show, create, update, delete. Added Bootstrap

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,2 +1,9 @@
 <h2><%= @article.title %></h2>
 <p><%= @article.content %></p>
+
+<p><%= link_to 'Edit this article', edit_path %></p>
+
+<%= link_to "Delete",
+  article_path(@article),
+  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+%>
