--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,3 +5,5 @@
   <li><%= link_to article.title, article_path(article) %></li>
 <% end %>
 </ul>
+
+<p><%= link_to 'Create new article', articles_new_path %> </p>
