--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,21 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
   </head>
 
   <body>
+
+  <header class="d-flex p-3 bg-light border-bottom align-items-center mb-3">
+      <div class="me-auto">
+        <h2 class="m-0">Pontus' wiki</h2>
+      </div>
+      <div>
+        <%= link_to 'Add a new article', articles_new_path %>
+      </div>
+  </header>
+
     <%= yield %>
   </body>
 </html>
