--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,5 @@
-<%= render 'form', article: @article %>
+<div class="container">
+  <%= render 'form', article: @article %>
 
-<p><%= link_to 'Back to index', articles_path %></p>
+  <p><%= link_to 'Back to index', articles_path %></p>
+</div>
