Added icon to add new button

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <h2>Edit article</h2>
   <%= render 'form', article: @article %>
 
   <p><%= link_to 'Back to index', articles_path %></p>
