--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,7 +1,11 @@
 <%= form_with model: @article do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :content %>
-  <%= f.text_field :content %>
-  <%= f.submit %>
+  <div class="mt-2">
+    <%= f.label :title, class: 'form-label' %>
+    <%= f.text_field :title, class: 'form-control' %>
+  </div>
+  <div class="mt-2">
+    <%= f.label :content, class: 'form-label' %>
+    <%= f.text_field :content, class: 'form-control' %>
+  </div>
+  <div class="mt-2"><%= f.submit class: 'btn btn-primary' %></div>
 <% end %>
