--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,6 @@
-<%= render 'form', article: @article %>
+<div class="container">
+  <h2>Add a new article</h2>
+  <%= render 'form', article: @article %>
 
-<p><%= link_to 'Back to index', articles_path %></p>
+  <p><%= link_to 'Back to index', articles_path %></p>
+</div>
