--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,21 @@
         <h2 class="m-0">Pontus' wiki</h2>
       </div>
       <div>
-        <%= link_to 'Add a new article', articles_new_path, class: "btn btn-primary" %>
+        <%= link_to articles_new_path, class: "btn btn-primary" do %>
+          <i class="fa-solid fa-pen me-2"></i> Add article
+        <% end %>
       </div>
   </header>
 
     <%= yield %>
+
+    <div class="container">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Pontus</span>
+    </div>
+  </footer>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
