--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,22 @@
 
   <ul class="list-group list-group-flush">
   <%  @articles.each do |article| %>
-    <li class="list-group-item"><%= link_to article.title, article_path(article) %></li>
+    <div class="d-flex border-bottom p-3">
+    <div class="me-auto">
+      <%= link_to article.title, article_path(article) %>
+    </div>
+
+    <div class="d-flex gap-3">
+      <%= link_to article_path(article),
+      data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} do %>
+        <i class="fa-solid fa-trash"></i>
+      <% end %>
+      <%= link_to edit_path(article) do %>
+        <i class="fa-solid fa-pen-to-square"></i>
+      <% end %>
+    </div>
+
+    </div>
   <% end %>
   </ul>
 </div>
