Started implementing breadcrumbs - must fix last link active class

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,11 +1,8 @@
-
-
 <div class="container">
   <h2>All articles</h2>
-
-  <ul class="list-group list-group-flush">
   <%  @articles.each do |article| %>
-    <div class="d-flex border-bottom p-3">
+
+    <div class="d-flex card flex-row mb-3 shadow-lg p-3 article-link">
     <div class="me-auto">
       <%= link_to article.title, article_path(article) %>
     </div>
@@ -22,5 +19,4 @@
 
     </div>
   <% end %>
-  </ul>
 </div>
