--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,26 +14,44 @@
 
   <body>
 
-  <header class="d-flex p-3 bg-black border-bottom align-items-center mb-3">
-      <div class="me-auto">
-        <h2 class="m-0">Pontus' wiki</h2>
-      </div>
-      <div>
-        <%= link_to articles_new_path, class: "btn btn-primary" do %>
-          <i class="fa-solid fa-pen me-2"></i> Add article
-        <% end %>
-      </div>
+  <header class="d-flex p-3 bg-dark border-bottom align-items-center mb-3">
+    <div class="me-auto">
+      <h2 class="m-0">Pontus' wiki</h2>
+    </div>
+    <div>
+      <%= link_to articles_new_path, class: "btn btn-primary" do %>
+        <i class="fa-solid fa-pen me-2"></i> Add article
+      <% end %>
+    </div>
   </header>
+
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+
+      <% breadcrumbs.each do |crumb| %>
+        <% if crumb.link? %>
+          <li class="breadcrumb-item"><%= link_to crumb.name, crumb.path %></li>
+        <% else %>
+            <li class="breadcrumb-item active"><%= link_to crumb.name, crumb.path %></li>
+        <% end %>
+
+        <% unless crumb == breadcrumbs.last %>
+          <span class="breadcrumb-separator">/</span>
+        <% end %>
+      <% end %>
+
+    </ol>
+  </nav>
 
     <%= yield %>
 
     <div class="container">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <div class="col-md-4 d-flex align-items-center">
-      <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Pontus</span>
+      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+          <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Pontus</span>
+        </div>
+      </footer>
     </div>
-  </footer>
-</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
